<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainLayoutActivity" >

    <Button
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onLinearLayoutClicked"
        android:text="@string/ui_button_linear_layout_title" />

    <Button
        android:id="@+id/btn_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onRelativeLayoutClicked"
        android:text="@string/ui_button_relative_layout_title" />

    <Button
        android:id="@+id/btn_scrollview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onScrollViewLayoutClicked"
        android:text="@string/ui_button_scrollview_layout_title" />

    <Button
        android:id="@+id/btn_listview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onListViewLayoutClicked"
        android:text="@string/ui_button_listview_layout_title" />

    <Button
        android:id="@+id/btn_date_time_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onDateTimeLayoutClicked"
        android:text="@string/ui_button_date_time_layout_title" />

    <Button
        android:id="@+id/btn_shared_preference_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onSharedPreferencesClicked"
        android:text="@string/ui_button_shared_preference_layout_title" />

</LinearLayout>