	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/ui_profile_email_title" >
	    </TextView>
	
	    <EditText
	        android:id="@+id/editEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:hint="@string/ui_profile_email_hint"
	        android:inputType="textEmailAddress"
	        android:singleLine="true" >
	    </EditText>
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/ui_profile_gender_title" >
	    </TextView>
	
	    <RadioGroup
	        android:id="@+id/radioGender"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/radioGenderF"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ui_profile_gender_female" />
	
	        <RadioButton
	            android:id="@+id/radioGenderM"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ui_profile_gender_male" />
	    </RadioGroup>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp" >
	
	        <Button
	            android:id="@+id/btnSave"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="40dp"
	            android:layout_weight="1"
	            android:onClick="onSaveClicked"
	            android:text="@string/ui_button_save_title" >
	        </Button>
	
	        <Button
	            android:id="@+id/btnCancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="40dp"
	            android:layout_weight="1"
	            android:onClick="onCancelClicked"
	            android:text="@string/ui_button_cancel_title" >
	        </Button>
	    </LinearLayout>
	
	</LinearLayout>